styles.css
:root {
    /* Light Theme Colors */
    --light-background: #ECFDF5;
    --light-text: #0C090A;

    /* Dark Theme Colors */
    --dark-background: #1F2937;
    --dark-text: #E5DED4;

    --main-green: #4ADF86;
    --secondary-green: #10B981;
    --text-green: #5DEF92;
    
    --dark-ish: #273549;
    --sub-text: #6B7280;
}

body {
    margin: 0;
    font-family: Inter, sans-serif;
}

.test {
    border: 1px dotted blue;
}

/* Page Themes Configuration START */
.light {
    background-color: var(--light-background);
    color: var(--light-text);
}

.dark {
    background-color: var(--dark-background);
    color: var(--dark-text);
}
/* Page Themes Configuration END */

/* Page Items START */
#heading {
    display: flex;
    flex-direction: row;

    width: 100%;
    height: 30px;

    margin-top: 30px;

    justify-content: end;
    align-items: center;
}

#theme-btn {
    display: block;

    border: 0;
    border-radius: 3px;

    text-align: center;

    background-color: var(--text-green);

    font-weight: 600;

    width: 110px;
    height: 28px;

    margin: 0 30px;
}

.header {
        font-family: Karla, sans-serif;
        font-weight: 800;
}

.subtitle {
        font-weight: 500;

        color: var(--sub-text);
}

.emphasize {
        color: var(--main-green);
}

#passLen-el {
        background-color: var(--dark-ish);
        color: var(--text-green);

        font-weight: 700;

        border: 0;
        border-radius: 5px;
}

.btn {
        display: block;
        border: 0;
        border-radius: 3px;
        text-align: center;

        background-color: var(--text-green);

        font-weight: 600;
}

.btn-confirm {
        display: block;
        border: 0;
        border-radius: 3px;
        text-align: center;

        background-color: var(--text-green);
        color: var(--light-text);

        font-weight: 600;

        padding: 5px 10px;
}

label {
        display: block;

        font-weight: 650;
}

.divisor {
        border: 1px solid var(--sub-text);
        border-radius: 3px;

        background-color: var(--sub-text);
}

.output-area {
        border: 0;
        border-radius: 6px;

        background-color: var(--dark-ish);
        color: var(--text-green);
}

.output-wrapper {
        display: flex;
}
/* Page Items END */

@media only screen and (max-width: 600px) {
    #hero {
        height: 402px;
        width: 300px;

        display: flex;
        flex-direction: column;

        align-items: center;
        text-align: center;

        margin: 50px auto 0 auto;
    }

    .header {
        font-size: 35px;
    }

    .title {
        margin: 0;
    }

    .subtitle {
        font-weight: 500;
        font-size: 20px;
        
        margin: 15px 0 15px 0;
    }

    .flex-column {
        margin: 0 0 15px 0;
    }

    #passLen-el {
        width: 30px;
        height: 30px;

        display: flex;

        justify-content: center;
        align-items: center;
    }

    .function {
        width: 30px;
        height: 30px;
    }

    .functions-wrapper {
        display: flex;

        flex-direction: row;
        justify-content: space-evenly;
        
        margin-top: 5px;
    }

    .divisor {
        width: 300px;
        height: 3px;
        margin: 20px auto;
    }

    #password {
        width: 300px;
        height: 60px;

        margin: 0 auto;

        display: flex;
        flex-direction: column;

        justify-content: space-between;
        align-items: center;
    }

    .output-area {
        width: 180px;
        height: 25px;

        display: flex;
        
        justify-content: center;
        align-items: center;
    }

    .copy {
        height: 25px;
        width: 30px;

        display: block;
        
        justify-content: center;
        align-items: center;

        background-color: var(--main-green);
        border: none;
        border-radius: 5px;
    }

    .copy-img {
        width: 22px;

        margin: 1px 0px 1px -2px;

        object-fit: cover;
    }
}

@media only screen and (min-width: 601px) {
    #hero {
        height: 230px;
        width: 500px;

        display: flex;
        flex-direction: column;

        align-items: center;
        text-align: center;

        margin: 50px auto 0 auto;
    }

    .header {
        font-size: 35px;
    }

    .title {
        margin: 0;
    }

    .subtitle {
        font-weight: 500;
        font-size: 20px;
        
        margin: 15px 0 40px 0;
    }

    .flex-column {
        margin: 0 0 15px 0;
    }

    #passLen-el {
        width: 30px;
        height: 30px;

        display: flex;

        justify-content: center;
        align-items: center;
    }

    #functions {
        width: 500px;
        height: 80px;

        display: flex;
        flex-direction: row;

        justify-content: space-around;
        align-items: center;
    }

    .function {
        width: 30px;
        height: 30px;
    }

    .btn-confirm {
        width: 120px;
        height: 50px;

        font-weight: 700;
    }

    .functions-wrapper {
        display: flex;

        flex-direction: row;
        justify-content: space-evenly;
        
        margin-top: 5px;
    }

    .divisor {
        width: 500px;
        height: 3px;
        margin: 20px auto 35px auto;
    }

    #password {
        width: 500px;

        margin: 0 auto;

        display: flex;
        flex-direction: row;

        justify-content: space-evenly;
        align-items: center;
    }

    .output-area {
        width: 180px;
        height: 25px;

        display: flex;
        
        justify-content: center;
        align-items: center;
    }

    .copy {
        height: 25px;
        width: 30px;

        display: block;
        
        justify-content: center;
        align-items: center;

        background-color: var(--main-green);
        border: none;
        border-radius: 5px;
    }

    .copy-img {
        width: 22px;

        margin: 1px 0px 1px -2px;

        object-fit: cover;
    }
}

